# echo-forge

./: .env  .env.example  Dockerfile  docker-compose.yml  echoforge.db  fire_test_signal.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/clustering/: distribution_model.py  outcome_cluster.py
app/core/: feature_builder.py  normalization.py  window_extractor.py
app/data/: __init__.py  polygon_fetcher.py
app/encoder/: feature_vector.py  pattern_encoder.py
app/outcomes/: failure_analysis.py  outcome_engine.py  projection.py
app/routes/: echo_scan.py  replay.py
app/schemas/: echo_request.py  echo_response.py
app/services/: intelligence_driver.py  notifier.py  signal_generator.py
app/similarity/: distance_metrics.py  matcher.py  ranker.py
app/storage/: models.py  repository.py
app/workers/: jobs.py
tests/: test_core.py  test_pipeline.py  test_similarity.py
