[project]
name = "echo-forge"
version = "0.1.0"
description = "Cross-asset pattern memory and echo-matching engine"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
